--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-# Bot Token
+# Your Bot Token
+# replace text with your bot token
 TOKEN = 'YOUR DISCORD TOKEN'
 
-# Bot discord ID
+# Your discord-BOT ID
+# replace number with your discord ID
 CLIENT_ID = 123456789123345
